# cnotebook

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  tasks.py
.git_backup/: config  index  packed-refs
.git_backup/logs/refs/heads/: master
.git_backup/logs/refs/remotes/origin/: HEAD  master
.git_backup/objects/pack/: pack-3a78628afdb8b3e0bf9cb383242ad761467d65f7.idx  pack-3a78628afdb8b3e0bf9cb383242ad761467d65f7.pack  pack-3a78628afdb8b3e0bf9cb383242ad761467d65f7.rev
.git_backup/refs/heads/: master
cnotebook/: __init__.py  align.py  context.py  helpers.py  ipython_ext.py  marimo_ext.py  pandas_ext.py  polars_ext.py  render.py
cnotebook/c3d/: __init__.py  c3d.py  convert.py
cnotebook/c3d/static/: 3dmol-gui.css  3dmol-gui.js
cnotebook/grid/: __init__.py  grid.py
cnotebook/molgrid/: __init__.py  grid.py  select.py  widget.py
cnotebook/molgrid/static/: widget.css  widget.js
cnotebook/molgrid/templates/: grid.html
cnotebook/molgrid/templates/css/: styles.css
cnotebook/molgrid/templates/js/: main.js
demos/: SVGs.ipynb  Small_Molecules.ipynb  jupyter_demo.ipynb  jupyter_svgs.ipynb  marimo_demo.py  molgrid_jupyter_demo.ipynb  pandas_jupyter_demo.ipynb  pandas_marimo_demo.py  polars_jupyter_demo.ipynb  polars_marimo_demo.py
demos/assets/: egfr.smi  egfr_template.mol
docs/: Makefile  advanced_rendering.rst  c3d.rst  conf.py  dataframes.rst  index.rst  installation.rst  molgrid.rst  quickstart.rst  rendering.rst  requirements.txt
docs/_static/: c3d-benzene.html  c3d-design-unit.html  c3d-full-ui.html  c3d-two-mols.html
docs/_static/css/: custom.css
docs/api/: c3d.rst  cnotebook.rst  context.rst  index.rst  molgrid.rst  pandas_ext.rst  polars_ext.rst  render.rst
examples/: molgrid_jupyter_demo.ipynb  molgrid_marimo_demo.py  pandas_jupyter_cluster_viewing.ipynb  pandas_jupyter_demo.ipynb  pandas_jupyter_svgs.ipynb  pandas_marimo_cluster_viewing.py  pandas_marimo_demo.py  polars_jupyter_cluster_viewing.ipynb  polars_jupyter_demo.ipynb  polars_marimo_cluster_viewing.py  polars_marimo_demo.py
examples/01-demo/: pandas_jupyter_demo.ipynb  pandas_jupyter_svgs.ipynb  pandas_marimo_demo.py  polars_jupyter_demo.ipynb  polars_marimo_demo.py
examples/02-molgrid/: molgrid_jupyter_demo.ipynb  molgrid_marimo_demo.py
examples/03-clusters/: pandas_jupyter_cluster_viewing.ipynb  pandas_marimo_cluster_viewing.py  polars_jupyter_cluster_viewing.ipynb  polars_marimo_cluster_viewing.py
examples/assets/: 5FQD_ligand.sdf  6XK9_ligand.sdf  rotations.sdf  spruce_9Q03_ABC__DU__A1CM7_C-502.oedu  two_series.sdf
examples/examples-from-docs/: c3d.ipynb
tests/: __init__.py  test_align.py  test_c3d.py  test_c3d_convert.py  test_context.py  test_detection.py  test_helpers.py  test_init.py  test_ipython_ext.py  test_marimo_ext.py  test_marimo_svg_support.py  test_molgrid.py  test_molgrid_integration.py  test_molgrid_pandas.py  test_molgrid_polars.py  test_pandas_ext.py  test_parity.py  test_polars_ext.py  test_render.py  test_render_molecule_grid.py  test_version.py
