# Packaging configuration file for cnotebook
# ----------------------------------------------------------------------------------------------------------------------
#   Guide: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
#   Spec:  https://packaging.python.org/en/latest/specifications/pyproject-toml/


# Choosing a build backend:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#choosing-a-build-backend
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]

# Project name (how users will pip install this project)
name = "cnotebook"

# Dynamic variables that are populated from other standard locations
dynamic = ["version", "dependencies"]

# One-line description or tagline
description = "Chemistry visualization in Jupyter Notebooks with the OpenEye Toolkits"

# Longer description or project README file
# https://packaging.python.org/specifications/core-metadata/#description-optional
readme = "README.md"

# Specify which Python versions you support (enforced by pip)
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
requires-python = ">=3.11"

# License using SPDX identifier
# https://packaging.python.org/en/latest/specifications/core-metadata/#license
license = "MIT"

# Search keywords
keywords = [
    "chemistry",
    "cheminformatics",
    "computational-chemistry",
    "molecular-visualization",
    "jupyter",
    "marimo",
    "openeye",
    "scientific-computing"
]

# Project authors and contact information
authors = [
    {name = "Scott Arne Johnson", email = "scott.arne.johnson@gmail.com" }
]

# Classifiers help users find your project by categorizing it
# https://pypi.org/classifiers/
classifiers = [
    # Development status
    "Development Status :: 5 - Production/Stable",

    # Intended audience
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",

    # Topic
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",

    # Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",

    # Operating systems
    "Operating System :: OS Independent",

    # Environment
    "Framework :: Jupyter",
    "Framework :: IPython"
]

# Project URLs
[project.urls]
"Homepage" = "https://github.com/scott-arne/cnotebook"
"Bug Reports" = "https://github.com/scott-arne/cnotebook/issues"
"Source" = "https://github.com/scott-arne/cnotebook"
"Documentation" = "https://github.com/scott-arne/cnotebook#readme"
"Changelog" = "https://github.com/scott-arne/cnotebook/blob/master/CHANGELOG.md"

# Additional groups of dependencies
# https://packaging.python.org/en/latest/specifications/dependency-specifiers/#extras
[project.optional-dependencies]
dev = ["invoke", "build", "pytest"]
test = ["pytest", "pytest-cov"]

# ----------------------------------------------------------------------------------------
# These configurations are specific to the `setuptools` build backend
# ----------------------------------------------------------------------------------------

[tool.setuptools.packages.find]

# Indicate the name of our package
include = ["cnotebook*"]

# Exclude any test directory
exclude = ["*test*"]

[tool.setuptools.package-data]

# Include static files (JS, CSS) in the package
cnotebook = ["grid/static/*"]


[tool.setuptools.dynamic]

# Get the version from a "single source of truth"
version = {attr = "cnotebook.__version__"}

# Package dependencies (these will be installed by pip)
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = {file = ["requirements.txt"]}

# ----------------------------------------------------------------------------------------
# Pytest configuration
# ----------------------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
